--- a/src/main/resources/assets/modtut/lang/en_US.lang
+++ b/src/main/resources/assets/modtut/lang/en_US.lang
@@ -1,6 +1,6 @@
 tile.modtut:testBlock.name=Sun Block
 item.modtut:testItem.name=Radioactive Matter
-item.modtut:dirtItem.name=Dirty Item
+item.modtut:dirtItem.name=Curious dirt
 tile.modtut:TestTileBlock.name=Hell anvil
 tile.modtut:GrindBlock.name=Grinder
 tile.modtut:DoubleFurnace.name=Double Furnace
